--- a/src/index.html
+++ b/src/index.html
@@ -149,51 +149,54 @@
       <div class="team-persona">
         <div class="team-persona__header">
           <img
-            src="https://s3.amazonaws.com/thumbnails.venngage.com/template/bcf804f5-e6b0-4389-8c44-d64482f922dc.png"
+            src="https://static1.abc.es/media/ciencia/2019/01/17/AdobeStock_221150952-U30834880027PMF--620x349@abc.jpg"
           />
         </div>
         <div class="team-persona__body">
-          <h2><a href="">Titulo</a></h2>
+          <h2>Efrain</h2>
           <hr />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt nobis
-            atque eligendi numquam aliquid explicabo dolorem totam minima nemo
-            corrupti! Unde, adipisci. Perspiciatis distinctio possimus
-            exercitationem accusantium debitis iste vero!
+            <li>Edad: 27</li>
+            <li>Profesión: Herrero</li>
+            <li>Hobbys: Tocar la ocarina</li>
+            <li>Destino: Playa</li>
+            <li>Random: Se ha casado 3 veces</li>
           </p>
         </div>
       </div>
       <div class="team-persona">
         <div class="team-persona__header">
           <img
-            src="https://s3.amazonaws.com/thumbnails.venngage.com/template/bcf804f5-e6b0-4389-8c44-d64482f922dc.png"
+            src="https://www.hola.com/imagenes/moda/modelos/2017060795582/modelos-masculinos-iconicos-ar/0-457-654/foto1m-m.jpg"
           />
         </div>
         <div class="team-persona__body">
-          <h2><a href="">Titulo</a></h2>
+          <h2>Libny</h2>
           <hr />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt nobis
-            atque eligendi numquam aliquid explicabo dolorem totam minima nemo
-            corrupti! Unde, adipisci. Perspiciatis distinctio possimus
-            exercitationem accusantium debitis iste vero!
+            <li>Edad: 27</li>
+            <li>Profesión: Alquemista</li>
+            <li>Hobbys: Cazar cuervos</li>
+            <li>Destino: Montaña</li>
+            <li>Random: Inventó la rueda</li>
           </p>
         </div>
       </div>
       <div class="team-persona">
         <div class="team-persona__header">
           <img
-            src="https://s3.amazonaws.com/thumbnails.venngage.com/template/bcf804f5-e6b0-4389-8c44-d64482f922dc.png"
+            src="https://i.pinimg.com/originals/30/aa/ea/30aaea7eb2c27b6f8dd5858e7aa05d4c.jpg"
           />
         </div>
         <div class="team-persona__body">
-          <h2><a href="">Titulo</a></h2>
+          <h2>Diego</h2>
           <hr />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt nobis
-            atque eligendi numquam aliquid explicabo dolorem totam minima nemo
-            corrupti! Unde, adipisci. Perspiciatis distinctio possimus
-            exercitationem accusantium debitis iste vero!
+            <li>Edad: 27</li>
+            <li>Profesión: Amo de casa</li>
+            <li>Hobbys: Dormir</li>
+            <li>Destino: Ciudad</li>
+            <li>Random: Subió 14 kilos este año</li>
           </p>
         </div>
       </div>
