--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           />
         </div>
         <div class="services-servicio__body">
-          <h2><a href="">Planeación</a></h2>
+          <h2>Planeación</h2>
           <hr />
           <p>
             Ha llegado el momento de disfrutar de unas merecidas vacaciones o un
@@ -48,7 +48,7 @@
           />
         </div>
         <div class="services-servicio__body">
-          <h2><a href="">Reserva</a></h2>
+          <h2>Reserva</h2>
           <hr />
           <p>
             Debe seleccionar el destino al cual quiere ir, fechas del viaje, y
@@ -65,7 +65,7 @@
           />
         </div>
         <div class="services-servicio__body">
-          <h2><a href="">Hotel</a></h2>
+          <h2>Hotel</h2>
           <hr />
           <p>
             Seleccione: Las habitaciones (Máximo 3) Huéspedes (Máximo 9) entre
