--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
         <ul class="jumbo">
           <div class="jumbo__logo">LOGO</div>
           <div class="menu">
-            <li class="menu__item"><a href="#">Servicios </a></li>
-            <li class="menu__item"><a href="">Noticias</a></li>
-            <li class="menu__item"><a href="">Equipo</a></li>
+            <li class="menu__item"><a href="#services">Servicios </a></li>
+            <li class="menu__item"><a href="#news">Noticias</a></li>
+            <li class="menu__item"><a href="#team">Equipo</a></li>
           </div>
         </ul>
       </nav>
